git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/branches/release@1069 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/docs/user_guide/src/metamorph.tex
+++ b/docs/user_guide/src/metamorph.tex
@@ -40,6 +40,9 @@ captionpos=b,
 Metamorph is a Java library including an XML based data transformation language, designed to ease dealing with metadata. In this document the design rationale behind Metamorph is discussed, followed by a user guide including many hands-on code examples. As a conclusion several real-world application scenarios are presented.
 \end{abstract}
 
+\setcounter{tocdepth}{2}
+\tableofcontents
+
 \section{Introduction}
 Metadata is a central ingredient of any information storage and retrieval system. Being defined as ``data on data'', metadata provides descriptive information on the items stocked in the system; be it a library, an archive, a museum or a web search engine.
 
