--- a/docs/user_guide/src/metamorph.tex
+++ b/docs/user_guide/src/metamorph.tex
@@ -32,6 +32,21 @@ columns=fullflexible,
 captionpos=b,
 }
 
+\lstdefinelanguage{JavaScript}{
+  keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+  keywordstyle=\bfseries,
+  ndkeywords={class, export, boolean, throw, implements, import, this},
+  ndkeywordstyle=\color{darkgray}\bfseries,
+  identifierstyle=\color{black},
+  sensitive=false,
+  comment=[l]{//},
+  morecomment=[s]{/*}{*/},
+  commentstyle=\ttfamily,
+  stringstyle=\ttfamily,
+  morestring=[b]',
+  morestring=[b]"
+}
+
 
 \begin{document}
 \maketitle
@@ -57,7 +72,7 @@ A final section on the future prospects and limitations of Metamorph rounds up t
 
 \section{Metadata Transformation in Practice}
 
-Metadata transformation is a complex and sometimes tedious process as its correctness depends on an overlap of domain knowledge and programming skills. First the typical procedure will be skeched followed by a discussion of the resulting challenges.
+Metadata transformation is a complex and sometimes tedious process as its correctness depends on an overlap of domain knowledge and programming skills. First the typical procedure will be sketched followed by a discussion of the resulting challenges.
 
 
 \subsection{Workflow}
@@ -146,7 +161,7 @@ One module implementing {\tt StreamSender} for example might read a bibliographi
 The events are received by another module which implements {\tt StreamReceiver} and {\tt StreamSender}, thus forming a pipe or filter element in the chain. 
 It may react on the events and transform the stream and its contents. Finally an arbitrary {\tt StreamReceiver} may form the endpoint of chain by reassembling the events to objects or persisting them to a database, logging them, indexing them. The interfaces shield the intricacies of one element in the chain from the others. This means that parts can be easily exchanged. The modularity gained by this schema enables reuse of software components and admits for a more flexible architecture.
 
-Having modeled complex data as a stream of events, we can now build generic operation to be applied to this stream. Handling the stream and transforming it is the pupose of Metamorph which will be explained in the following section.
+Having modeled complex data as a stream of events, we can now build generic operation to be applied to this stream. Handling the stream and transforming it is the purpose of Metamorph which will be explained in the following section.
 
 
 
@@ -182,7 +197,7 @@ The Metamorph object acts as a pipe element in the data stream. See also figure 
 The wiring is done by calling {\tt setReceiver()}. The call returns its argument, preserving the respective type. Thus the calls can be chained to build up a pipeline as shown in the listing. Finally the processing is stared by calling the respective method on the data source/reader. The method name depends on the reader. In the Metamorph project {\tt read()} is used by convention.
 
 \begin{lstlisting}[float=htb, label=codepipeline1,caption= Putting together a processing pipeline according to the pattern in section \ref{pipeline}., language=Java]
-// create neccessary objects
+// create necessary objects
 final PicaReader reader = new PicaReader();
 final Metamorph metamorph = MetamorphBuilder.build("defnition.xml");
 final ListMapWriter writer = new ListMapWriter();
@@ -273,7 +288,7 @@ Builtin functions include:
 \begin{description}
 \item[{\tt compose}] wraps the value in a prefix and postfix.
 \item[{\tt constant}] replaces the value with a constant.
-\item[{\tt count}] counts occurences of the value.
+\item[{\tt count}] counts occurrences of the value.
 \item[{\tt regexp}] regexp matching. Optional extraction of specific match groups.
  \item[{\tt replace}] replace operation based on a regexp.
 \item[{\tt substring}] extraction of a substring.
@@ -286,9 +301,9 @@ Builtin functions include:
  \item[{\tt htmlanchor}] create a HTML anchor tag.
  \item[{\tt trim}] trim the value.
  \item[{\tt split}] splitting based on a regexp.
- \item[{\tt script}] processing the value with a JavaScript function.
+ \item[{\tt script}] processing the value with a JavaScript function. 
  \item[{\tt normalize-utf8}]  UTF-8 normalization. Brings Umlauts into canonical form.
-\item[{\tt occurence}]. filtering based on occurence.
+\item[{\tt occurrence}]. filtering based on occurrence.
 \end{description}
 
 For the time being see the test-cases and {\tt schema/metamorph.xsd} for arguments and usage examples.
@@ -347,22 +362,40 @@ metamorph.putMap("name of map", map);
 
 
 
-\subsubsection{Integration of custom Java code}\label{customfunc}
+\subsubsection{Integration of customized code}\label{customfunc}
 
-If the predefined functions for data processing do not satisfy your needs, you may define new functions as shown in listing \ref{def}.
-In the definition statement a Java class is bound to a name which is subsequently used to refer to it. There are a few important points to note:
+In case the predefined functions for data processing do not satisfy your needs, two choices to extend Metamorph scripts with customized code are at your disposal: The first is to write a Java class. The second is to load a JavaScript file.
+
+\paragraph{Java}
+
+You may define new functions as shown in listing \ref{def}. In the definition statement a Java class is bound to a name which is subsequently used to refer to it. There are a few important points to note:
 The class must implement the {\tt Function} interface. For each attribute provided when referencing the function, a respective {\tt set} method is called right after instantiation. This mechanism correctly handles the types {\tt String}, {\tt boolean} and {\tt int}. A function is instantiated once per use in Metamorph definition and may thus maintain a state. See the JavaDoc for more details, examples and advanced issues such as dealing with state.
 
-\begin{lstlisting}[float=htb, label=def,caption=User defined functions.]
+\begin{lstlisting}[float=htb, label=def,caption=User defined functions in Java.]
 <functions>
    <def name="my_super_function" class="org.myorg.myfunctions.MySuperFunction" />
 </functions> 
 \end{lstlisting}
 
+\paragraph{JavaScript}
+
+To invoke a JavaScript function use the {\tt script} tag as shown in listing \ref{def2}. 
+\begin{lstlisting}[float=htb, label=def2,caption=User defined functions in JavaScript.]
+<data source="X">
+   <script file="script.js" invoke="emphasize" />
+</data>
+\end{lstlisting}
+The {\tt script} takes as arguments the path to a JavaScript file and the name of the function to be invoked using the data as sole argument. The return value may be any object as Metamorph will call {\tt toString()} on it before proceeding. Listing \ref{js} shows the JavaScript file referenced in Listing \ref{def2}.
+
+\begin{lstlisting}[float=htb, label=js, language=JavaScript, caption=JavaScript file implementing the function referenced in listing \ref{def2}.]
+function emphasize(val){
+	return "<em>" + val + "</em>";
+}
+\end{lstlisting}
 
 \subsubsection{Recursion}\label{recursion}
 
-Pieces of data processed with Metamorph are by default sent to the {\tt StreamReceiver} registered with Metamorph. There is however the posibillity to send a piece of data into a feedback loop. In this case the data reenters Metamorph just as it came from the upstream {\tt StreamSender}. This recursion is accomplished by prepending an '@' to the name of the data as shown in listing \ref{lst:rec}. 
+Pieces of data processed with Metamorph are by default sent to the {\tt StreamReceiver} registered with Metamorph. There is however the possibility to send a piece of data into a feedback loop. In this case the data reenters Metamorph just as it came from the upstream {\tt StreamSender}. This recursion is accomplished by prepending an '@' to the name of the data as shown in listing \ref{lst:rec}. 
 
 \begin{lstlisting}[float=htb,label=lst:rec,caption=Prepending '@' to the literal name to enable recursive processing.]
 <data source="002@.0" name="@format">
@@ -468,7 +501,7 @@ public final class MyTest {/*bind to xml test*/}
 \end{lstlisting}
 
 The {\tt RunWith} annotation instructs JUnit to let {\tt org.culturegraph.metamorph.test.TestSuite} handle the testing.
-Use the {\tt TestDefinitions} annotation to tell {\tt TestSuite} were to look for tests. If no such annotation is found {\tt TestSuite} looks for an XML files with the same name as the binding class. The XML files are expected to be located in the same folder as the binding class. The rationale is that both belong together and separating them would be confusing. Colocating the xml files with the class files is causing trouble with same build environments though. In the case of Maven there is an straight forward remedy: see listing \ref{maven_test}
+Use the {\tt TestDefinitions} annotation to tell {\tt TestSuite} were to look for tests. If no such annotation is found {\tt TestSuite} looks for an XML files with the same name as the binding class. The XML files are expected to be located in the same folder as the binding class. The rationale is that both belong together and separating them would be confusing. Collocating the xml files with the class files is causing trouble with same build environments though. In the case of Maven there is an straight forward remedy: see listing \ref{maven_test}
 
 \begin{lstlisting}[float=htb, label=maven_test,caption=Telling Maven not to ignore resources colocated with java files in the test source directory.]
 <testResources>
@@ -541,7 +574,7 @@ The advantage of encoding all data transformation in Culturegraph as Metamorph d
 
 
 \section{Future Prospects}
-Metamoprh is work in progress. Hence there are naturally open issues, limitations as well as possible extentions to be added in the future. 
+Metamoprh is work in progress. Hence there are naturally open issues, limitations as well as possible extensions to be added in the future. 
 
 \subsection{Open Issues and Limitations}
 
@@ -549,7 +582,7 @@ We are aware that the current version of Metamorph exhibits the following limita
 
 \begin{description}
 \item[Entity Names]  For the time being, the name provided to the {\tt entity} tag is a constant and cannot be dynamically assigned. Further releases of Metamorph will address this issue.
-\item[User Libraries] Currently there the possibility to extend the tag set for data processing is limited to the inclusion of Java Code described in \ref{customfunc} and the invocatio of JavaScript functions via the {\tt script} tag. The is no mechanism yet to include a whole set of new function (forming a library).
+\item[User Libraries] Currently there the possibility to extend the tag set for data processing is limited to the inclusion of Java Code described in \ref{customfunc} and the invocation of JavaScript functions via the {\tt script} tag. The is no mechanism yet to include a whole set of new function (forming a library).
 \item[Addressing pieces of data] There is no wildcard support in the data addressing mechanism. The {\tt data} tag only accepts literal strings as source address.
 \end{description}
 We hope to cut down this list in the releases to come.
